manifests/k8s.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scrob
    role: web
  name: scrob-svc
  namespace: scrob-production
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: scrob
    role: web
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    getkuby.io/dockerfile-checksum: 527ee0fe4dd047afc07738c03838c4fafbe4a4c2a012f9a30813d2a218953db3
  labels:
    app: scrob
    role: web
  name: scrob-web
  namespace: scrob-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrob
      role: web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: scrob
        role: web
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: scrob-config
        - secretRef:
            name: scrob-secrets
        image: img.hephy.pro/scrob/web:20220724190956
        imagePullPolicy: IfNotPresent
        name: scrob-web
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: "/healthz"
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
      imagePullSecrets:
      - name: scrob-registry-secret
      restartPolicy: Always
      serviceAccountName: scrob-sa
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: production-letsencrypt
  name: scrob-ingress
  namespace: scrob-production
spec:
  ingressClassName: public
  rules:
  - host: scrob-dev.hephy.pro
    http:
      paths:
      - backend:
          service:
            name: scrob-svc
            port:
              number: 8080
        path: "/"
        pathType: Prefix
  - host: scrob-dev.hephy.pro
    http:
      paths:
      - backend:
          service:
            name: scrob-assets-svc
            port:
              number: 8082
        path: "/assets"
        pathType: Prefix
      - backend:
          service:
            name: scrob-assets-svc
            port:
              number: 8082
        path: "/packs"
        pathType: Prefix
  tls:
  - hosts:
    - scrob-dev.hephy.pro
    secretName: scrob-tls
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scrob
    role: assets
  name: scrob-assets-svc
  namespace: scrob-production
spec:
  ports:
  - name: http
    port: 8082
    protocol: TCP
    targetPort: http
  selector:
    app: scrob
    role: assets
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: scrob
    role: assets
  name: scrob-assets
  namespace: scrob-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrob
      role: assets
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: scrob
        role: assets
    spec:
      containers:
      - image: img.hephy.pro/scrob/web:20220724190956-assets
        imagePullPolicy: IfNotPresent
        name: scrob-assets
        ports:
        - containerPort: 8082
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: "/500.html"
            port: 8082
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: "/etc/nginx/nginx.conf"
          name: nginx-config
          subPath: nginx.conf
      imagePullSecrets:
      - name: scrob-registry-secret
      restartPolicy: Always
      serviceAccountName: scrob-assets-sa
      volumes:
      - configMap:
          name: scrob-assets-nginx-config
        name: nginx-config
